--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "use-debounce": "^10.0.4"
   },
   "devDependencies": {
